--- a/traditional-hotels.html
+++ b/traditional-hotels.html
@@ -108,7 +108,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
          <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCliyJnjq6jAnNIb9E38qEcmlLt2VSzfy9lIhx32ZGbqaPipbbTzksjBoCSgkQAvD_BwE" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Traditional-Card-1.jpg" alt="">
               </a>
             </div>
@@ -116,7 +116,7 @@
          <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
-                <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCliyJnjq6jAnNIb9E38qEcmlLt2VSzfy9lIhx32ZGbqaPipbbTzksjBoCSgkQAvD_BwE" target="_blank">
+                <a href="javascript:void(0)">
                     Hotel Savoy
                 </a>
                </h3>
@@ -178,7 +178,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.rantapuisto.fi/en/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-2.jpg" alt="">
              </a>
            </div>
@@ -186,7 +186,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.rantapuisto.fi/en/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Rantapuisto
                </a>
               </h3>
@@ -229,7 +229,7 @@
                </a>
 
 
-               <a href="https://www.rantapuisto.fi/en/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Rantapuisto.h1544219.Hotel-Information?chkin=2024-10-06&chkout=2024-10-12&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334116110&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=704818698923810816&selected=1544219&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=109&top_cur=USD&userIntent=&selectedRoomType=201511860&selectedRatePlan=207589178&searchId=66912361-9db8-4a0f-a238-ab60338a8c53&propertyName=Hotel+Rantapuisto&clickref=1100lzz5kEpi&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5kEpi&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5kEpi" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -247,7 +247,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClnR1U6eZFLjZW0A-y90Un_x4nJGzir1hnsBsa4Bnu06wGW3wYh9ncBoCoqsQAvD_BwE" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-3.jpg" alt="">
              </a>
            </div>
@@ -255,7 +255,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClnR1U6eZFLjZW0A-y90Un_x4nJGzir1hnsBsa4Bnu06wGW3wYh9ncBoCoqsQAvD_BwE" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Kämp
                </a>
               </h3>
@@ -298,7 +298,7 @@
                </a>
 
 
-               <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClnR1U6eZFLjZW0A-y90Un_x4nJGzir1hnsBsa4Bnu06wGW3wYh9ncBoCoqsQAvD_BwE" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Kamp.h220671.Hotel-Information?chkin=2024-09-27&chkout=2024-10-03&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334084247&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6361129&selected=220671&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=338&top_cur=USD&userIntent=&selectedRoomType=202322759&selectedRatePlan=230215272&searchId=84894181-80a2-4b1a-8f38-d67e7f8fe735&propertyName=Hotel+Kamp&clickref=1101lzEkZVBX&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkZVBX&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkZVBX" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -316,7 +316,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.hotelhelka.com/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-4.webp" alt="">
              </a>
            </div>
@@ -324,7 +324,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.hotelhelka.com/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Helka
                </a>
               </h3>
@@ -366,7 +366,7 @@
                </a>
 
 
-               <a href="https://www.hotelhelka.com/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Helka.h44570.Hotel-Information?chkin=2024-12-15&chkout=2024-12-21&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334056945&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=3000660990&selected=44570&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=136&top_cur=USD&userIntent=&selectedRoomType=238373&selectedRatePlan=396256148&searchId=c20e0413-85dc-4b6f-9c7a-92a4cf2449b5&propertyName=Hotel+Helka&clickref=1101lzEkZWYp&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkZWYp&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkZWYp" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -384,7 +384,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.hotelarthur.fi/en/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-5.jpg" alt="">
              </a>
            </div>
@@ -392,7 +392,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.hotelarthur.fi/en/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Arthur
                </a>
               </h3>
@@ -433,7 +433,7 @@
                </a>
 
 
-               <a href="https://www.hotelarthur.fi/en/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-Arthur.h15378.Hotel-Information?chkin=2024-12-06&chkout=2024-12-12&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724334030843&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=553248635964998477&selected=15378&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=98&top_cur=USD&userIntent=&selectedRoomType=276161&selectedRatePlan=383439388&searchId=6cc63af5-8202-4007-8004-6e5bcc58b6c8&propertyName=Hotel+Arthur&clickref=1101lzEm24F7&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEm24F7&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEm24F7" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -451,7 +451,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://bestwesternplushotelhaaga.h-rez.com/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-6.jpeg" alt="">
              </a>
            </div>
@@ -459,7 +459,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://bestwesternplushotelhaaga.h-rez.com/" target="_blank">
+               <a href="javascript:void(0)">
                 Hotel Best Western Plus Hotel Haaga
                </a>
               </h3>
@@ -500,7 +500,7 @@
                </a>
 
 
-               <a href="https://bestwesternplushotelhaaga.h-rez.com/" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/The-Hague-Hotels-Best-Western-Plus-Plaza-Den-Haag-City-Center.h38211965.Hotel-Information?chkin=2025-01-11&chkout=2025-01-17&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333999212&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=7650&destination=The+Hague%2C+South+Holland%2C+Netherlands&destType=MARKET&neighborhoodId=6350198&selected=38211965&latLong=52.07848%2C4.31241&sort=RECOMMENDED&top_dp=88&top_cur=USD&userIntent=&selectedRoomType=220855429&selectedRatePlan=292227638&searchId=a3532acf-fa93-4868-b18d-21d4da7dd4ac&propertyName=Best+Western+Plus+Plaza+Den+Haag+City+Center&clickref=1100lzz5o2PW&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5o2PW&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5o2PW" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -519,7 +519,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.laplandhotels.com/FI/lapin-hotellit/pallas/lapland-hotels-pallas.html#:~:text=Autolla%20saapuessasi%20olemme%20aivan%20Pallastunturin%20juurella%20osoitteessa%20Pallastunturintie%20550%2C%2099330%20Pallastunturi." target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-7.jpg" alt="">
              </a>
            </div>
@@ -527,7 +527,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.laplandhotels.com/FI/lapin-hotellit/pallas/lapland-hotels-pallas.html#:~:text=Autolla%20saapuessasi%20olemme%20aivan%20Pallastunturin%20juurella%20osoitteessa%20Pallastunturintie%20550%2C%2099330%20Pallastunturi." target="_blank">
+               <a href="javascript:void(0)">
                 Hotelli Tallas
                </a>
               </h3>
@@ -568,7 +568,7 @@
                </a>
 
 
-               <a href="https://www.laplandhotels.com/FI/lapin-hotellit/pallas/lapland-hotels-pallas.html#:~:text=Autolla%20saapuessasi%20olemme%20aivan%20Pallastunturin%20juurella%20osoitteessa%20Pallastunturintie%20550%2C%2099330%20Pallastunturi." target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Kittila-Hotels-Lapland-Hotels-Pallas.h1636406.Hotel-Information?chkin=2024-09-23&chkout=2024-09-29&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333965021&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&destination=Pallastunturintie+560%2C+99330+Pallastunturi%2C+Finland&destType=ADDRESS&latLong=68.0463104%2C24.062437&sort=RECOMMENDED&top_dp=116&top_cur=USD&userIntent=&selectedRoomType=200857520&selectedRatePlan=204345694&searchId=06a66a6e-e2a2-4660-90e7-db0ccb9e364f&propertyName=Lapland+Hotels+Pallas&clickref=1100lzz5o4d4&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5o4d4&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5o4d4" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -586,7 +586,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.laplandhotels.com/EN/hotels-in-lapland/rovaniemi/lapland-hotels-ounasvaara-chalets.html" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-9.jpg" alt="">
              </a>
            </div>
@@ -594,7 +594,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.laplandhotels.com/EN/hotels-in-lapland/rovaniemi/lapland-hotels-ounasvaara-chalets.html" target="_blank">
+               <a href="javascript:void(0)">
                 Lapland Hotel Ounasvaara Chalets
                </a>
               </h3>
@@ -636,7 +636,7 @@
                </a>
 
 
-               <a href="https://www.laplandhotels.com/EN/hotels-in-lapland/rovaniemi/lapland-hotels-ounasvaara-chalets.html" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Rovaniemi-Hotels-Lapland-Hotels-Ounasvaara-Chalets.h3498121.Hotel-Information?chkin=2024-10-20&chkout=2024-10-27&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333921481&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3059&destination=Rovaniemi%2C+Rovaniemi%2C+Lapland%2C+Finland&destType=MARKET&selected=3498121&latLong=66.503964%2C25.729528&sort=RECOMMENDED&top_dp=114&top_cur=USD&userIntent=&selectedRoomType=200526530&selectedRatePlan=390511923&searchId=833c1835-6cca-4579-8831-be63560b8e40&propertyName=Lapland+Hotels+Ounasvaara+Chalets&clickref=1101lzEm2fZn&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEm2fZn&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEm2fZn" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
@@ -654,7 +654,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-rovaniemi-city" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Traditional-Card-8.jpg" alt="">
              </a>
            </div>
@@ -662,7 +662,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-rovaniemi-city" target="_blank">
+               <a href="javascript:void(0)">
                 Scandic Rovaniemi City
                </a>
               </h3>
@@ -704,7 +704,7 @@
                </a>
 
 
-               <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-rovaniemi-city" target="_blank" class="button-82-pushable" role="button">
+               <a href="https://www.expedia.com/Rovaniemi-Hotels-Scandic-Rovaniemi-City.h525650.Hotel-Information?chkin=2024-09-12&chkout=2024-09-18&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333892878&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3059&destination=Rovaniemi%2C+Rovaniemi%2C+Lapland%2C+Finland&destType=MARKET&selected=525650&latLong=66.503964%2C25.729528&sort=RECOMMENDED&top_dp=138&top_cur=USD&userIntent=&selectedRoomType=202282721&selectedRatePlan=211756879&searchId=5be58cf7-0027-401e-99cd-b2fbbde19327&propertyName=Scandic+Rovaniemi+City&clickref=1101lzEm2g7v&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEm2g7v&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEm2g7v" target="_blank" class="button-82-pushable" role="button">
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
