--- a/scenic-retreats.html
+++ b/scenic-retreats.html
@@ -245,7 +245,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.ruka.fi/en/skiresort/accommodation/rukavalley?adults=2&children=0&infants=0" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Scenic-Card-3.jpg" alt="">
              </a>
            </div>
@@ -253,7 +253,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.ruka.fi/en/skiresort/accommodation/rukavalley?adults=2&children=0&infants=0" target="_blank">
+               <a href="javascript:void(0)">
                 Ruka Valley Lodge
                </a>
               </h3>
@@ -314,7 +314,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
       <div class="luxury-left" data-aos="fade-right">
          <div class="luxury-img">
-           <a href="https://harriniva.fi/en/3-wilderness-resorts/jeris-lakeside-resort/" target="_blank">
+           <a href="javascript:void(0)">
              <img src="assets/images/Scenic-Card-4.jpg" alt="">
            </a>
          </div>
@@ -322,7 +322,7 @@
       <div class="luxury-right" data-aos="fade-left">
          <div class="luxury-text">
             <h3>
-             <a href="https://harriniva.fi/en/3-wilderness-resorts/jeris-lakeside-resort/" target="_blank">
+             <a href="javascript:void(0)">
               Hotel Jeris
              </a>
             </h3>
@@ -594,7 +594,7 @@
 <div class="luxury-wrap" data-aos="fade-up">
   <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
-       <a href="https://www.kumpeli.fi/en/front-page/" target="_blank">
+       <a href="javascript:void(0)">
          <img src="assets/images/Scenic-Card-8.avif" alt="">
        </a>
      </div>
@@ -602,7 +602,7 @@
   <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
-         <a href="https://www.kumpeli.fi/en/front-page/" target="_blank">
+         <a href="javascript:void(0)">
           Lapland Hotel Kumpeli
          </a>
         </h3>
