--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <nav>
           <div class="site-logo" data-aos="fade-right">
-            <a href="/">
+            <a href="./">
               <img src="assets/images/logo.png" alt="" >
             </a>
           </div>
