--- a/luxury-accommodations.html
+++ b/luxury-accommodations.html
@@ -108,8 +108,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="javascript:void(0)"
-                >
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-1.jpg" alt="">
               </a>
             </div>
@@ -117,8 +116,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href="javascript:void(0)"
-                  >
+                <a href="javascript:void(0)">
                   Hotel Kämp
                 </a>
               </h3>
@@ -159,7 +157,6 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
@@ -232,11 +229,11 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
-                <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-St-George-Helsinki.h18133517.Hotel-Information?chkin=2025-01-06&chkout=2025-01-12&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724331564066&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6278775&selected=18133517&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=256&top_cur=USD&userIntent=&selectedRoomType=216316931&selectedRatePlan=262260677&searchId=3e081303-938e-4344-a7a2-e9f38e4ec8b0&propertyName=Hotel+St.+George+Helsinki&clickref=1011lzEpYDwR&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpYDwR&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpYDwR" target="_blank" class="button-82-pushable" role="button">
+                <a href="https://www.expedia.com/Helsinki-Hotels-Hotel-St-George-Helsinki.h18133517.Hotel-Information?chkin=2025-01-06&chkout=2025-01-12&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724331564066&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=6278775&selected=18133517&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=256&top_cur=USD&userIntent=&selectedRoomType=216316931&selectedRatePlan=262260677&searchId=3e081303-938e-4344-a7a2-e9f38e4ec8b0&propertyName=Hotel+St.+George+Helsinki&clickref=1011lzEpYDwR&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpYDwR&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpYDwR"
+                  target="_blank" class="button-82-pushable" role="button">
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
@@ -254,8 +251,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="javascript:void(0)"
-                >
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-3.jpg" alt="">
               </a>
             </div>
@@ -303,7 +299,6 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
@@ -375,7 +370,6 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
@@ -446,11 +440,11 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
-                <a href="https://www.expedia.com/Inari-Hotels-Aurora-Village-Ivalo.h17452695.Hotel-Information?chkin=2024-09-16&chkout=2024-09-22&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724331793388&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=6155851&destination=Inari%2C+Lapland%2C+Finland&destType=MARKET&selected=17452695&latLong=68.90622%2C27.027765&sort=RECOMMENDED&top_dp=356&top_cur=USD&userIntent=&selectedRoomType=202300333&selectedRatePlan=282056478&searchId=d4767c7a-5442-43eb-98e5-3cf40648482f&propertyName=Aurora+Village+Ivalo&clickref=1100lzz5fj4B&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5fj4B&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5fj4B" target="_blank" class="button-82-pushable" role="button">
+                <a href="https://www.expedia.com/Inari-Hotels-Aurora-Village-Ivalo.h17452695.Hotel-Information?chkin=2024-09-16&chkout=2024-09-22&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724331793388&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=6155851&destination=Inari%2C+Lapland%2C+Finland&destType=MARKET&selected=17452695&latLong=68.90622%2C27.027765&sort=RECOMMENDED&top_dp=356&top_cur=USD&userIntent=&selectedRoomType=202300333&selectedRatePlan=282056478&searchId=d4767c7a-5442-43eb-98e5-3cf40648482f&propertyName=Aurora+Village+Ivalo&clickref=1100lzz5fj4B&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5fj4B&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5fj4B"
+                  target="_blank" class="button-82-pushable" role="button">
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
@@ -516,7 +510,6 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
@@ -587,11 +580,11 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
-                <a href="https://www.expedia.com/Kittila-Hotels-Hotel-Levi-Panorama-Levi-Chalet-Apartments.h3300308.Hotel-Information?chkin=2024-10-01&chkout=2024-10-08&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724332326897&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=6124769&destination=Kittila%2C+Lapland%2C+Finland&destType=MARKET&selected=3300308&latLong=67.79871%2C24.81019&sort=RECOMMENDED&top_dp=99&top_cur=USD&userIntent=&selectedRoomType=200536185&selectedRatePlan=203086719&searchId=2f83a909-c230-4c32-ad5b-9e4eb5aeb9cc&propertyName=Hotel+Levi+Panorama&clickref=1100lzz5fpLy&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5fpLy&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5fpLy" target="_blank" class="button-82-pushable" role="button">
+                <a href="https://www.expedia.com/Kittila-Hotels-Hotel-Levi-Panorama-Levi-Chalet-Apartments.h3300308.Hotel-Information?chkin=2024-10-01&chkout=2024-10-08&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724332326897&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=6124769&destination=Kittila%2C+Lapland%2C+Finland&destType=MARKET&selected=3300308&latLong=67.79871%2C24.81019&sort=RECOMMENDED&top_dp=99&top_cur=USD&userIntent=&selectedRoomType=200536185&selectedRatePlan=203086719&searchId=2f83a909-c230-4c32-ad5b-9e4eb5aeb9cc&propertyName=Hotel+Levi+Panorama&clickref=1100lzz5fpLy&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5fpLy&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5fpLy"
+                  target="_blank" class="button-82-pushable" role="button">
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
@@ -657,11 +650,11 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
-                <a href="https://www.expedia.com/Sodankyla-Hotels-Kakslauttanen-Arctic-Resort.h12318138.Hotel-Information?chkin=2024-08-24&chkout=2024-08-30&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724332387797&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3244&destination=Sodankyla%2C+Lapland%2C+Finland&destType=MARKET&selected=12318138&latLong=67.415998%2C26.588939&sort=RECOMMENDED&top_dp=170&top_cur=USD&userIntent=&selectedRoomType=219034179&selectedRatePlan=280235529&searchId=542bdc95-4778-449d-806c-ce0a6356ab87&propertyName=Kakslauttanen+Arctic+Resort&clickref=1101lzEkXgDP&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkXgDP&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkXgDP" target="_blank" class="button-82-pushable" role="button">
+                <a href="https://www.expedia.com/Sodankyla-Hotels-Kakslauttanen-Arctic-Resort.h12318138.Hotel-Information?chkin=2024-08-24&chkout=2024-08-30&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724332387797&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=3244&destination=Sodankyla%2C+Lapland%2C+Finland&destType=MARKET&selected=12318138&latLong=67.415998%2C26.588939&sort=RECOMMENDED&top_dp=170&top_cur=USD&userIntent=&selectedRoomType=219034179&selectedRatePlan=280235529&searchId=542bdc95-4778-449d-806c-ce0a6356ab87&propertyName=Kakslauttanen+Arctic+Resort&clickref=1101lzEkXgDP&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkXgDP&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkXgDP"
+                  target="_blank" class="button-82-pushable" role="button">
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
@@ -726,7 +719,6 @@
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
                   Lue lisää
-                  </span>
                 </a>
 
 
