--- a/casino-hotels.html
+++ b/casino-hotels.html
@@ -293,7 +293,7 @@
 
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
-                  Lue lisää        
+                  Lue lisää
                 </a>
 
 
@@ -359,7 +359,7 @@
 
               <div class="read-more-btn">
                 <a href="javascript:void(0)" class=" moreless-button">
-                  Lue lisää    
+                  Lue lisää
                 </a>
 
 
@@ -387,6 +387,147 @@
   <!-- luxury main section end -->
 
 
+  <!-- newsletter section start -->
+
+  <div class="news-letter ptb-50">
+    <div class="container">
+      <div class="newsletter-wrap" data-aos="fade-up">
+        <div class="newsletter-heading">
+          <h3>
+            Tilaa uutiskirjeemme pysyäksesi ajan tasalla
+          </h3>
+        </div>
+        <div class="news-form">
+          <input type="email" placeholder="Kirjoita sähköpostiosoitteesi">
+          <button>
+            Rekisteröidy</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- newsletter section end -->
+
+  <!-- faq section start -->
+
+  <div class="faq-sec ptb-50" data-aos="fade-up">
+    <div class="container">
+      <div class="site-heading">
+        <h2>
+          Usein Kysytyt Kysymykset (UKK)
+        </h2>
+      </div>
+      <div class="faq-wrap">
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                Mitä tämä verkkosivusto tarjoaa?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Autamme sinua löytämään parhaat hotellit Suomessa, tarjoten valikoiman vaihtoehtoja ylellisistä
+                majoituksista luonnonläheisiin lomapaikkoihin.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Kuinka navigoin sivustolla?
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Tutki kategorioitamme löytääksesi hotellit, jotka vastaavat mieltymyksiäsi. Käytä varaussivustoamme
+                varataksesi majoituksen tai saadaksesi lisätietoja jokaisesta vaihtoehdosta.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Onko hotelleista arvioita?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Kyllä, esittelemme vain huippuluokan hotelleja, jotta voit valita korkealaatuisia vaihtoehtoja
+                oleskeluusi.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                Voinko tehdä varauksia suoraan sivustolla?
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Kyllä, voit klikata varaussivustoille varataksesi hotellin tai tarkistaaksesi saatavuuden.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                Kuinka voin ottaa yhteyttä asiakaspalveluun?
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Vieraile "Yhteystiedot" -sivullamme saadaksesi tiedot siitä, miten voit tavoittaa asiakastukitiimimme.
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSix">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                Onko saatavilla erityisiä tarjouksia?
+              </button>
+            </h2>
+            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Tarkista yksittäisten hotellien sivut mahdollisten erityistarjousten tai kampanjoiden osalta.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSeven">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                Kuinka voin pysyä ajan tasalla päivityksistä?
+              </button>
+            </h2>
+            <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Tilaa uutiskirjeemme saadaksesi viimeisimmät tiedot uusista hotelleista ja erityistarjouksista.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- faq section end -->
 
   <!-- footer section start -->
   <div class="site-footer ptb-50">
