--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
-    <title>Kotisivu</title>
+    <title>Kotisivu nncy</title>
   </head>
   <body>
     <!-- header section start  -->
